# resources/colaborador.py
@@ -11,6 +11,7 @@ class Colaboradores(Resource):
     '''
     def get(self):
         '''Método get da Classe Resource (/colaborador) que retorna todos os colaboradores salvos no banco de dados'''
+        
         try:
             return {"colaboradores" : [colaborador.json() for colaborador in ColaboradorModel.query.all()]}   
         except:
@@ -27,9 +28,9 @@ class Colaborador(Resource):
         construtor com chave e valor de todos elementos da requisição
     matricula : str
         matricula (Primary Key) do colaborador
-    nome : str, opcional
+    nome : str, requerido
         nome do colaborador
-    sobrenome : str, opcional
+    sobrenome : str, requerido
         sobrenome do colaborador
     cargo : str, opcional
         cargo do colaborador
@@ -58,8 +59,8 @@ class Colaborador(Resource):
         deleta o colaborador correspondente a matrícula de entrada.
     '''
     argumentos = reqparse.RequestParser()
-    argumentos.add_argument("nome", type=str, required=False)
-    argumentos.add_argument("sobrenome", type=str, required=False)
+    argumentos.add_argument("nome", type=str, required=True)
+    argumentos.add_argument("sobrenome", type=str, required=True)
     argumentos.add_argument("cargo", type=str, required=False)
     argumentos.add_argument("codigo_cargo", type=str, required=False)
     argumentos.add_argument("lider", type=str, required=False)
@@ -70,6 +71,7 @@ class Colaborador(Resource):
                 
     def get(self, matricula):
         '''Método get da Classe Resource (/colaborador/<string:matricula>) que retorna o colaborador correspondente a matrícula de entrada '''
+        
         colaborador = ColaboradorModel.encontrar_colaborador(matricula)
         if colaborador:
                 return colaborador.json()
@@ -77,10 +79,14 @@ class Colaborador(Resource):
 
     def post(self, matricula):
         '''Método post da Classe Resource (/colaborador/<string:matricula>) que salva o colaborador correspondente a matrícula de entrada '''
+        
         if ColaboradorModel.encontrar_colaborador(matricula):
             return {'mensagem': "Matricula {} ja existe!".format(matricula) , "codigo" : 400} , 400
 
-        dados = Colaborador.argumentos.parse_args()
+        try:
+            dados = Colaborador.argumentos.parse_args()
+        except:
+            return {"mensagem" : "Nome/Sobrenome incompletos." , "codigo" : 401} , 401
         colaborador = ColaboradorModel(matricula, **dados)
         try:
             colaborador.salvar_colaborador()
@@ -90,7 +96,11 @@ class Colaborador(Resource):
 
     def put(self, matricula):
         '''Método put da Classe Resource (/colaborador/<string:matricula>) que atualza colaborador ou salva novo colaborador correspondente a matrícula de entrada'''
+        
+        self.argumentos.replace_argument("nome", type=str, required=False)
+        self.argumentos.replace_argument("sobrenome", type=str, required=False)
         dados = Colaborador.argumentos.parse_args()
+
 
         colaborador_encontrado = ColaboradorModel.encontrar_colaborador(matricula)
         if colaborador_encontrado:
@@ -106,6 +116,7 @@ class Colaborador(Resource):
 
     def delete(self, matricula):
         '''Método delete da Classe Resource (/colaborador/<string:matricula>) que deleta o colaborador correspondente a matrícula de entrada'''
+        
         colaborador = ColaboradorModel.encontrar_colaborador(matricula)
         if colaborador:
             try:
